# SemioCore-v1

./: .editorconfig  .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  MANIFESTO.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/contract/: README.md  ctxscan.v1.md  trace.v1.md
paper_figures/: make_cite_snippets.py  make_figures.py  make_tables.py  trace_utils.py
programs/: e2_border_paper.sc
schemas/: ast.schema.json  lang.schema.json
semioc/: __init__.py  __main__.py  cli.py  contract_ids.py  ctx.py  ctxscan.py  engine.py  model.py  opt.py  parser.py  plasticity.py  replay.py  sc_parser.py  util.py  world.py
tests/: conftest.py  test_biomed_contracts_golden.py  test_cli_audit_score_compare_golden.py  test_cli_audit_tool_run_golden.py  test_cli_biomed_compare_plasticity2_golden.py  test_cli_biomed_score_golden.py  test_cli_contracts_validate_smoke.py  test_cli_parse_smoke.py  test_cli_plasticity_smoke.py  test_conformance_ctxscan_matches_expected.py  test_conformance_run_trace_matches_expected.py  test_contract_registry_validate.py  test_contract_schemas_v1.py  test_golden_ast.py  test_golden_plasticity.py  test_parser_smoke.py  test_schemas_smoke.py  test_smoke.py  test_witness_audit.py
tools/: compare_json.py  compare_trace.py  paper_artifacts.py  paper_demo.py  paper_grade_artifacts.py  regenerate_goldens.py  verify_witness.py
(+91 files in other folders)
